# mistrz-klawiatury-npg

./: .gitignore  CMakeLists.txt  MoneySave  README.md  vcpkg.json
saves/: Ai.savegame  ChatGPT.savegame  Darek.savegame  Jakub.savegame  Józef.savegame  JĂłzef.savegame  Krzysiu.savegame  Marta.savegame  Martyna.savegame  Michal.savegame  Piotr.savegame
src/: ImGuiBase.cpp  frazy.cpp  frazy.h  main.cpp  savegame.cpp  savegame.h  stats.cpp  stats.hpp  style.cpp  style.hpp
src/editor/: EditorBase.cpp  EditorBase.h  GameBase.cpp  GameBase.h
src/system/: FileDialogManager.h  ImageLoader.cpp  ImageLoader.h
